--- a/pages/pages.css
+++ b/pages/pages.css
@@ -6,6 +6,7 @@
 @import url(../blocks/container/container.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/profile/profile.css);
+@import url(../blocks/places/places.css);
 
 
 
@@ -18,6 +19,12 @@
 @import url(../blocks/profile/__job/profile__job.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/places/__place/places__place.css);
+@import url(../blocks/places/__image/places__image.css);
+@import url(../blocks/places/__like-button/places__like-button.css);
+@import url(../blocks/places/__title/places__title.css);
+
+
 
 
 
