--- a/pages/index.css
+++ b/pages/index.css
@@ -7,6 +7,7 @@
 @import url(../blocks/header/header.css);
 @import url(../blocks/profile/profile.css);
 @import url(../blocks/places/places.css);
+@import url(../blocks/footer/footer.css);
 
 
 
@@ -23,6 +24,7 @@
 @import url(../blocks/places/__image/places__image.css);
 @import url(../blocks/places/__like-button/places__like-button.css);
 @import url(../blocks/places/__title/places__title.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
 
 
 
