--- a/blocks/popup-edit/popup-edit.css
+++ b/blocks/popup-edit/popup-edit.css
@@ -2,7 +2,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    display: none;display: flex;
+    display: none;
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0, .5);
