feat: ховер при наведении на кнопки и логотип готов

--- a/blocks/popup-edit/__save-button/popup-edit__save-button.css
+++ b/blocks/popup-edit/__save-button/popup-edit__save-button.css
@@ -9,4 +9,10 @@
     line-height: 22px;
     text-align: center;
     cursor: pointer;
+    border-radius: 2px;
+    transition: opacity .3s linear;
+}
+
+.popup-edit__save-button:hover {
+    opacity: .8;
 }
