--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -7,4 +7,10 @@
     margin-left: auto;
     border: 0px;
     cursor: pointer;
+    transition: opacity .3s linear;
+    border-radius: 2px;
+}
+
+.profile__add-button:hover {
+    opacity: .6;
 }
