--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -4,5 +4,10 @@
     height: 33px;
     background-size: contain;
     background-repeat: no-repeat;
+    background-color: black;
+    transition: background-image .3s linear;
+}
 
+.header__logo:hover {
+    background-image: url(../../../images/logo\ black.svg);
 }
