--- a/blocks/places/__like-button/places__like-button.css
+++ b/blocks/places/__like-button/places__like-button.css
@@ -6,4 +6,9 @@
     padding: 0;
     background-color: #FFFFFF;
     cursor: pointer;
+    transition: opacity .3s linear;
+}
+
+.places__like-button:hover {
+    opacity: .5;
 }
