--- a/blocks/popup-edit/__close-button/popup-edit__close-button.css
+++ b/blocks/popup-edit/__close-button/popup-edit__close-button.css
@@ -9,4 +9,9 @@
     top: -40px;
     cursor: pointer;
     padding: 0;
+    transition: opacity .3s linear;
+}
+
+.popup-edit__close-button:hover {
+    opacity: .6;
 }
