--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -8,4 +8,9 @@
     background-repeat: no-repeat;
     border: 0;
     cursor: pointer;
+    transition: opacity .3s linear;
+}
+
+.profile__edit-button:hover {
+    opacity: .6;
 }
