--- a/pages/index.css
+++ b/pages/index.css
@@ -39,3 +39,4 @@
 
 /* modifiers */
 @import url(../blocks/popup-edit/_is-opened/popup-edit_is-opened.css);
+@import url(../blocks/popup-edit/_is-opened/popup-edit_is-opened.css);
