--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -14,3 +14,20 @@
 .profile__edit-button:hover {
     opacity: .6;
 }
+
+
+@media screen and (max-width: 1024px ) {
+    .profile__edit-button {
+        width: 24px;
+        height: 24px;
+        margin-left: 10px;
+    }
+}
+
+@media screen and (max-width: 768px ) {
+    .profile__edit-button {
+        width: 18px;
+        height: 18px;
+        margin-left: 10px;
+    }
+}
