--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,8 +1,22 @@
 .header {
-    width: 880px;
+    max-width: 880px;
+    width: 100%;
     display: flex;
     height: 74px;
     flex-direction: column;
     justify-content: space-between;
     padding-top: 45px;
+}
+
+@media screen and (max-width: 1024px ) {
+    .header {
+        height: 56px;
+        padding-top: 28px;
+    }
+}
+
+@media screen and (max-width: 768px ) {
+    .header {
+        padding-top: 28px;
+    }
 }
