--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -1,16 +1,40 @@
 .profile__add-button {
-    width: 150px;
+    max-width: 150px;
+    width: 100%;
     height: 50px;
     background-color: black;
     margin: 0;
     padding: 0;
     margin-left: auto;
-    border: 0px;
+    border: 2px solid #FFFFFF;
+    box-sizing: border-box;
     cursor: pointer;
     transition: opacity .3s linear;
     border-radius: 2px;
+    background-image: url(../../../images/Add\ Button.svg);
+    background-size: 22px;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .profile__add-button:hover {
     opacity: .6;
+}
+
+@media screen and (max-width: 1024px ) {
+    .profile__add-button {
+        max-width: 768px;
+        margin-left: 0;
+        align-items: center;
+        margin-top: auto;
+
+    }
+}
+
+
+@media screen and (max-width: 768px ) {
+    .profile__add-button {
+        margin-left: 0;
+        margin-top: auto;
+    }
 }
