--- a/blocks/popup-edit/__window/popup-edit__window.css
+++ b/blocks/popup-edit/__window/popup-edit__window.css
@@ -1,6 +1,7 @@
 .popup-edit__window {
     background-color: #FFFFFF;
     width: 430px;
+    max-width: 430px;
     height: 336px;
     display: flex;
     flex-direction: column;
@@ -9,4 +10,20 @@
     position: relative;
     border-radius: 10px;
     box-sizing: border-box;
+}
+
+@media screen and (max-width: 1024px ) {
+    .popup-edit__window {
+        width: calc(100% - 36px);
+        height: 328px;
+        padding: 25px 22px;
+    }
+}
+
+@media screen and (max-width: 768px ) {
+    .popup-edit__window {
+        width: calc(100% - 36px);
+        height: 328px;
+        padding: 25px 22px;
+    }
 }
