--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -2,4 +2,19 @@
     padding: 67px 0 60px;
     color: #545454;
     width: 880px;
+    max-width: 880px;
+}
+
+@media screen and (max-width: 1024px ) {
+    .footer {
+        padding: 48px 19px 36px;
+        width: calc(100% - 19px * 2);
+    }
+}
+
+@media screen and (max-width: 768px ) {
+    .footer {
+        padding: 48px 19px 36px;
+        width: calc(100% - 19px * 2)
+    }
 }
