--- a/blocks/places/places.css
+++ b/blocks/places/places.css
@@ -5,3 +5,19 @@
     grid-template-columns: repeat(auto-fill, minmax(282px,1fr));
     gap: 17px;
 }
+
+@media screen and (max-width: 1024px ) {
+    .places {
+        width: calc(100% - 19px * 2);
+        padding-top: 36px;
+        gap: 20px;
+    }
+}
+
+@media screen and (max-width: 768px ) {
+    .places {
+        width: calc(100% - 19px * 2);
+        padding-top: 36px;
+        gap: 20px;
+    }
+}
