--- a/blocks/popup-edit/__job/popup-edit__job.css
+++ b/blocks/popup-edit/__job/popup-edit__job.css
@@ -10,3 +10,9 @@
     margin: 30px 0 48px;
     box-sizing: border-box;
 }
+
+@media screen and (max-width: 768px ) {
+    .popup-edit__job {
+        margin: 30px 0 45px;
+    }
+}
