--- a/blocks/popup-edit/__title/popup-edit__title.css
+++ b/blocks/popup-edit/__title/popup-edit__title.css
@@ -4,3 +4,11 @@
     font-size: 24px;
     line-height: 29px;
 }
+
+@media screen and (max-width: 768px ) {
+    .popup-edit__title {
+        font-size: 18px;
+        line-height: 22px;
+        margin-bottom: 75px;
+    }
+}
