fixed after tests

--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -20,6 +20,6 @@
     .profile__about {
         max-width: 100%;
         justify-content: center;
-        margin-left: 0x;
+        margin-left: 0;
     }
 }
