--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -15,6 +15,6 @@
 @media screen and (max-width: 768px ) {
     .footer {
         padding: 48px 19px 36px;
-        width: calc(100% - 19px * 2)
+        width: calc(100% - 19px * 2);
     }
 }
