hotfix: after-review

--- a/blocks/popup-edit/__close-button/popup-edit__close-button.css
+++ b/blocks/popup-edit/__close-button/popup-edit__close-button.css
@@ -2,14 +2,15 @@
     width: 32px;
     height: 32px;
     border: none;
-    background: none;
-    object-fit: cover;
+    background:none;
     position: absolute;
     right: -40px;
     top: -40px;
     cursor: pointer;
     padding: 0;
     transition: opacity .3s linear;
+    object-fit: cover;
+    object-position: center;
 }
 
 .popup-edit__close-button:hover {
