--- a/blocks/profile/__edit-button/profile__edit-button.css
+++ b/blocks/profile/__edit-button/profile__edit-button.css
@@ -3,7 +3,7 @@
     height: 24px;
     margin-left: 18px;
     background-color: black;
-    background-image: url(../../../images/Edit\ Button.svg);
+    background-image: url(../../../images/Edit-Button.svg);
     background-size: contain;
     background-repeat: no-repeat;
     border: 0;
@@ -14,8 +14,6 @@
 .profile__edit-button:hover {
     opacity: .6;
 }
-
-
 
 
 @media screen and (max-width: 768px ) {
