--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -5,18 +5,24 @@
     line-height: 22px;
     margin: 0;
     width: 100%;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    max-width: 80%;
 }
+
+
 
 @media screen and (max-width: 1024px ) {
     .profile__job {
         text-align: center;
+        margin-top: 14px;
     }
 }
 
 
 @media screen and (max-width: 768px ) {
     .profile__job {
-        text-align: center;
         font-size: 14px;
         line-height: 17px;
     }
