--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -4,3 +4,10 @@
     line-height: 22px;
     margin: 0;
 }
+
+@media screen and (max-width: 768px ) {
+    .footer__copyright {
+        font-size: 14px;
+        line-height: 17px;
+    }
+}
