--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -15,8 +15,9 @@
     }
 }
 
-@media screen and (max-width: 768px ) {
-    .header {
-        padding-top: 28px;
-    }
+.header::after {
+    content: '';
+    width: 100%;
+    border: 1px solid rgba(84, 84, 84,0.7);
+    margin: 0;
 }
