--- a/blocks/popup-edit/__input/popup-edit__input.css
+++ b/blocks/popup-edit/__input/popup-edit__input.css
@@ -1,4 +1,4 @@
-.popup-edit__job {
+.popup-edit__input {
     height: 27px;
     background: none;
     border: none;
@@ -7,12 +7,5 @@
     font-size: 14px;
     line-height: 17px;
     padding: 0;
-    margin: 30px 0 48px;
     box-sizing: border-box;
-}
-
-@media screen and (max-width: 768px ) {
-    .popup-edit__job {
-        margin: 30px 0 45px;
-    }
 }
