--- a/blocks/profile/__about/profile__about.css
+++ b/blocks/profile/__about/profile__about.css
@@ -1,25 +1,16 @@
 .profile__about {
-    max-width: 60%;
-    border: 1px red;
     display: flex;
     flex-wrap: wrap;
     margin-left: 30px;
     align-items: center;
+    max-width: 60%;
 }
 
 @media screen and (max-width: 1024px ) {
     .profile__about {
         max-width: 100%;
-        justify-content: center;
         margin-left: 0px;
-    }
-}
-
-
-@media screen and (max-width: 768px ) {
-    .profile__about {
-        max-width: 100%;
         justify-content: center;
-        margin-left: 0;
+        margin-bottom: 36px;
     }
 }
