--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,6 +1,6 @@
 .profile {
     padding-top: 40px;
-    width: calc(100% - 2*16px);
+    width: 100%;
     max-width: 880px;
     display: flex;
     align-items: center;
@@ -9,15 +9,16 @@
 
 @media screen and (max-width: 1024px ) {
     .profile {
-        padding-top: 42px;
+        padding: 42px 19px;
         flex-direction: column;
-        height: 286px;
+        min-height: 286px;
+        box-sizing: border-box;
     }
 }
 
 @media screen and (max-width: 768px ) {
     .profile {
         min-width: 320px;
-        height: 286px;
+        
     }
 }
