--- a/pages/index.css
+++ b/pages/index.css
@@ -1,5 +1,5 @@
 @import url(../vendor/normalize.css);
-@import url(../fonts.css);
+@import url(../vendor/fonts.css);
 
 /* Blocks */
 @import url(../blocks/page/page.css);
@@ -14,7 +14,6 @@
 
 /* Elements */
 @import url(../blocks/header/__logo/header__logo.css);
-@import url(../blocks/header/__line/header__line.css);
 @import url(../blocks/profile/__image/profile__image.css);
 @import url(../blocks/profile/__about/profile__about.css);
 @import url(../blocks/profile/__name/profile__name.css);
@@ -27,8 +26,8 @@
 @import url(../blocks/places/__title/places__title.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup-edit/__window/popup-edit__window.css);
-@import url(../blocks/popup-edit/__name/popup-edit__name.css);
-@import url(../blocks/popup-edit/__job/popup-edit__job.css);
+@import url(../blocks/popup-edit/__input/popup-edit__input.css);
+@import url(../blocks/popup-edit/__input/_text/popup-edit_text_job.css);
 @import url(../blocks/popup-edit/__title/popup-edit__title.css);
 @import url(../blocks/popup-edit/__save-button/popup-edit__save-button.css);
 @import url(../blocks/popup-edit/__close-button/popup-edit__close-button.css);
