--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -18,11 +18,13 @@
     .header__logo {
         width: 124px;
         height: 28px;
+        margin-left: 27px;
     }
 }
 
 @media screen and (max-width: 768px ) {
     .header__logo {  
         width: 104px;
+
     }
 }
