--- a/blocks/popup-edit/__close-button/popup-edit__close-button.css
+++ b/blocks/popup-edit/__close-button/popup-edit__close-button.css
@@ -3,16 +3,28 @@
     height: 32px;
     border: none;
     background:none;
+    background-image: url(../../../images/Close-Icon.svg);
     position: absolute;
     right: -40px;
     top: -40px;
     cursor: pointer;
     padding: 0;
     transition: opacity .3s linear;
-    object-fit: cover;
-    object-position: center;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .popup-edit__close-button:hover {
     opacity: .6;
+}
+
+
+@media screen and (max-width: 768px ) {
+    .popup-edit__close-button  {
+        width: 20px;
+        height: 20px;
+        right: 0;
+        top: -36px;
+    }
 }
