--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -9,16 +9,8 @@
 
 @media screen and (max-width: 1024px ) {
     .profile {
-        padding: 42px 19px;
+        padding: 42px 19px 0;
         flex-direction: column;
-        min-height: 286px;
         box-sizing: border-box;
-    }
-}
-
-@media screen and (max-width: 768px ) {
-    .profile {
-        min-width: 320px;
-        
     }
 }
