--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,15 +2,15 @@
     max-width: 880px;
     width: 100%;
     display: flex;
-    height: 74px;
     flex-direction: column;
     justify-content: space-between;
-    padding: 45px 0 41px;
+    padding: 45px 0 0;
+    box-sizing: border-box;
 }
 
 @media screen and (max-width: 1024px ) {
     .header {
-        padding: 28px 0 32px;
+        padding: 28px 0 0;
     }
 }
 
