--- a/blocks/popup/__close-button/popup__close-button.css
+++ b/blocks/popup/__close-button/popup__close-button.css
@@ -1,4 +1,4 @@
-.popup-edit__close-button {
+.popup__close-button {
     width: 32px;
     height: 32px;
     border: none;
@@ -15,13 +15,13 @@
     background-size: cover;
 }
 
-.popup-edit__close-button:hover {
+.popup__close-button:hover {
     opacity: .6;
 }
 
 
 @media screen and (max-width: 768px ) {
-    .popup-edit__close-button  {
+    .popup__close-button  {
         width: 20px;
         height: 20px;
         right: 0;
