--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,4 +1,4 @@
-.popup-edit__input {
+.popup__input {
     height: 27px;
     background: none;
     border: none;
@@ -11,12 +11,12 @@
 }
 
 
-.popup-edit__input:last-of-type {
+.popup__input:last-of-type {
     margin: 30px 0 48px;
 }
 
 @media screen and (max-width: 768px ) {
-    .popup-edit__input:last-of-type  {
+    .popup__input:last-of-type  {
         margin: 30px 0 45px;
     }
 }
