--- a/blocks/popup/__save-button/popup__save-button.css
+++ b/blocks/popup/__save-button/popup__save-button.css
@@ -1,4 +1,4 @@
-.popup-edit__save-button {
+.popup__save-button {
     min-height: 50px;
     color: white;
     border: none;
@@ -13,12 +13,12 @@
     transition: opacity .3s linear;
 }
 
-.popup-edit__save-button:hover {
+.popup__save-button:hover {
     opacity: .8;
 }
 
 @media screen and (max-width: 768px ) {
-    .popup-edit__save-button {
+    .popup__save-button {
         font-size: 14px;
         line-height: 17px;
     }
