--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,4 +1,4 @@
-.popup-edit__title {
+.popup__title {
     margin: 0 0 54px;
     font-weight: 900;
     font-size: 24px;
@@ -6,7 +6,7 @@
 }
 
 @media screen and (max-width: 768px ) {
-    .popup-edit__title {
+    .popup__title {
         font-size: 18px;
         line-height: 22px;
         margin-bottom: 75px;
