--- a/blocks/popup/__window/popup__window.css
+++ b/blocks/popup/__window/popup__window.css
@@ -1,4 +1,4 @@
-.popup-edit__window {
+.popup__window {
     background-color: #FFFFFF;
     width: 430px;
     max-width: 430px;
@@ -12,7 +12,7 @@
 }
 
 @media screen and (max-width: 1024px ) {
-    .popup-edit__window {
+    .popup__window {
         width: calc(100% - 36px);
         padding: 25px 22px;
     }
