--- a/pages/index.css
+++ b/pages/index.css
@@ -24,7 +24,9 @@
 @import url(../blocks/places/__place/places__place.css);
 @import url(../blocks/places/__image/places__image.css);
 @import url(../blocks/places/__like-button/places__like-button.css);
+@import url(../blocks/places/__like-button/_active/places__like-button_active.css);
 @import url(../blocks/places/__title/places__title.css);
+@import url(../blocks/places/__delete-button/places__delete-button.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/__window/popup__window.css);
 @import url(../blocks/popup/__form/popup__form.css);
