--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,12 +1,15 @@
 .popup {
     position: fixed;
+    display: flex;
     top: 0;
     left: 0;
-    display: none;
     width: 100%;
     height: 100%;
     background-color: rgba(0,0,0, .5);
     align-items: center;
     justify-content: center;
+    opacity: 0;
+    visibility: hidden;
+    transition: visibility .4s, opacity .4s linear;
 }
 
