--- a/blocks/form/__input/form__input.css
+++ b/blocks/form/__input/form__input.css
@@ -12,11 +12,5 @@
 
 
 .form__input:last-of-type {
-    margin: 30px 0 48px;
-}
-
-@media screen and (max-width: 768px ) {
-    .form__input:last-of-type  {
-        margin: 30px 0 45px;
-    }
+    margin: 30px 0 0;
 }
