--- a/blocks/form/__save-button/form__save-button.css
+++ b/blocks/form/__save-button/form__save-button.css
@@ -11,6 +11,7 @@
     cursor: pointer;
     border-radius: 2px;
     transition: opacity .3s linear;
+    margin-top: 48px;
 }
 
 .form__save-button:hover {
@@ -21,5 +22,6 @@
     .form__save-button {
         font-size: 14px;
         line-height: 17px;
+        margin-top: 45px;
     }
 }
