--- a/pages/index.css
+++ b/pages/index.css
@@ -36,6 +36,8 @@
 @import url(../blocks/popup/__close-button/popup__close-button.css);
 @import url(../blocks/form/__input/form__input.css);
 @import url(../blocks/form/__save-button/form__save-button.css);
+@import url(../blocks/form/__input-error/form__input-error.css);
+
 
 
 
@@ -47,3 +49,4 @@
 @import url(../blocks/popup/__window/_image/popup__window_image.css);
 @import url(../blocks/popup/__title/_for-image/popup__title_image.css);
 @import url(../blocks/popup/__save-button/__save-button_inactive/popup__save-button_inactive.css);
+@import url(../blocks/form/__input-error/_active/form__input-error_active.css);
