hotfixes after review

--- a/blocks/form/__save-button/_inactive/form__save-button_inactive.css
+++ b/blocks/form/__save-button/_inactive/form__save-button_inactive.css
@@ -3,4 +3,9 @@
     background: none;
     color: #000000;
     opacity: 0.2;
+    cursor: default;
+}
+
+.form__save-button_inactive:hover {
+    opacity: 0.2;
 }
