hotfixes after 1st review

--- a/src/blocks/form/__input-error/form__input-error.css
+++ b/src/blocks/form/__input-error/form__input-error.css
@@ -4,5 +4,7 @@
     line-height: 15px;
     color: #FF0000;
     margin-top: 5px;
-    display: none;
+    /* display: none; */
+    min-height: 30px;
+    
 }
