--- a/src/blocks/places/__like-button/places__like-button.css
+++ b/src/blocks/places/__like-button/places__like-button.css
@@ -1,6 +1,6 @@
 .places__like-button {
-    margin: auto 20px 38px 0;
-    height: 19px;
+    
+    min-height: 19px;
     width: 22px;
     border: 0;
     padding: 0;
