--- a/src/blocks/popup/__save-button/popup__save-button.css
+++ b/src/blocks/popup/__save-button/popup__save-button.css
@@ -11,6 +11,7 @@
     cursor: pointer;
     border-radius: 2px;
     transition: opacity .3s linear;
+    margin: 0;
 }
 
 .popup__save-button:hover {
