--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -21,10 +21,14 @@
 @import url(../blocks/profile/__job/profile__job.css);
 @import url(../blocks/profile/__edit-button/profile__edit-button.css);
 @import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/profile/__image-cover/profile__image-cover.css);
+@import url(../blocks/profile/__pencil/profile__pencil.css);
 @import url(../blocks/places/__place/places__place.css);
 @import url(../blocks/places/__image/places__image.css);
 @import url(../blocks/places/__like-button/places__like-button.css);
+@import url(../blocks/places/__like-info/places__like-info.css);
 @import url(../blocks/places/__title/places__title.css);
+@import url(../blocks/places/__like-counter/places__like-counter.css);
 @import url(../blocks/places/__delete-button/places__delete-button.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/__window/popup__window.css);
@@ -48,5 +52,7 @@
 @import url(../blocks/popup/_image/popup_image.css);
 @import url(../blocks/popup/__window/_image/popup__window_image.css);
 @import url(../blocks/popup/__title/_for-image/popup__title_image.css);
+@import url(../blocks/popup/__title/_short-popup/popup__title_short-popup.css);
+@import url(../blocks/form/__save-button/_short-popup/form__save-button_short-popup.css);
 @import url(../blocks/form/__save-button/_inactive/form__save-button_inactive.css);
 @import url(../blocks/form/__input-error/_active/form__input-error_active.css);
