--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,8 +1,10 @@
 .profile__image {
-    width: 120px;
-    height: 120px;
+    width: 100%;
+    height: 100%;
     border-radius: 100%;
 }
+
+
 
 @media screen and (max-width: 1024px ) {
     .profile__image {
